# event-driven-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
nats/: server.conf
services/gateway/: Dockerfile  pyproject.toml
services/gateway/src/gateway/: __main__.py  config.py  handlers.py  ioc.py  publisher.py
services/gateway/src/gateway/application/: __init__.py  parsing.py  process_update.py
services/gateway/src/gateway/middlewares/: __init__.py  callback_answer.py  throttling.py
services/sender/: Dockerfile  pyproject.toml
services/sender/src/sender/: __main__.py  config.py  dlq.py  handlers.py  ioc.py  rate_limiter.py
services/sender/src/sender/application/: __init__.py  deliver.py
services/user_service/: Dockerfile  pyproject.toml
services/user_service/src/user_service/: __main__.py  config.py  handlers.py  ioc.py  keyboards.py  lexicon.py  publisher.py
services/user_service/src/user_service/application/: __init__.py  answer_callback.py  register_user.py
tests/: conftest.py  mocked_aiogram.py  test_contracts.py  test_gateway.py  test_gateway_middlewares.py  test_keyboard_builder.py  test_logging.py  test_rate_limiter.py  test_sender.py  test_user_service.py
