[project]
name = "gateway"
version = "0.1.0"
description = "API gateway: receives Telegram updates and routes them onto NATS."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "cachetools>=6.2.2",
    "faststream[nats]>=0.6.3",
    "dishka>=1.7.2",
    "pydantic-settings>=2.0.0",
    "contracts",
    "adapters",
]

[tool.uv.sources]
contracts = { workspace = true }
adapters = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]
