[project]
name = "sender"
version = "0.1.0"
description = "Single delivery point to Telegram; enforces global rate limits."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "faststream[nats]>=0.6.3",
    "dishka>=1.7.2",
    "dishka-faststream>=0.6.0",
    "pydantic-settings>=2.0.0",
    "contracts",
    "adapters",
]

[tool.uv.sources]
contracts = { workspace = true }
adapters = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sender"]
