[project]
name = "user_service"
version = "0.1.0"
description = "Owns the users table; reacts to commands and asks the sender to reply."
requires-python = ">=3.13"
dependencies = [
    "faststream[nats]>=0.6.3",
    "dishka>=1.7.2",
    "dishka-faststream>=0.6.0",
    "pydantic-settings>=2.0.0",
    "contracts",
    "database",
    "adapters",
    "domain",
]

[tool.uv.sources]
contracts = { workspace = true }
database = { workspace = true }
adapters = { workspace = true }
domain = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_service"]
